# MusicRecognizer

./: .gitignore  BUILDING.md  CONTRIBUTORS.md  FUNDING.md  PRIVACY.md  README.md  build.gradle  build.gradle.kts  compose_compiler_config.conf  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/schemas/com.mrsep.musicrecognizer.data.database.ApplicationDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fake_json_failure.txt  fake_json_success.txt
app/src/main/proto/: user_preferences.proto  user_preferences_proto.proto
app/src/main/res/drawable/: baseline_album_96.xml  baseline_library_music_24.xml  baseline_mic_80.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_musicbrainz.xml  ic_shortcut_background.xml  ic_shortcut_recognize.xml
app/src/main/res/raw/: aboutlibraries.json  keep.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: files.xml
build-logic/: gradle.properties  settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationComposeConventionPlugin.kt  AndroidApplicationConventionPlugin.kt  (+6 more)
core/audio/: build.gradle.kts
core/common/: build.gradle  build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/database/schemas/com.mrsep.musicrecognizer.core.database.ApplicationDatabase/: 1.json  10.json  11.json  2.json  3.json  5.json  7.json  8.json  9.json
core/datastore/: build.gradle.kts
core/domain/: build.gradle.kts
core/metadata/: build.gradle.kts
core/network/: build.gradle.kts  consumer-rules.pro
core/recognition/: build.gradle.kts
core/recognition/native/songrecfp/: Cargo.toml  README.md  rust-toolchain.toml
core/recognition/native/songrecfp/src/: lib.rs
core/recognition/native/songrecfp/src/fingerprinting/: algorithm.rs  signature_format.rs
core/recognition/src/main/cpp/vibrafp/lib/: CMakeLists.txt  vibra.cpp  vibra.sym  vibra_jni.cpp
core/recognition/src/main/cpp/vibrafp/lib/algorithm/: frequency.cpp  frequency.h  signature.cpp  signature.h  signature_generator.cpp  signature_generator.h
core/recognition/src/main/cpp/vibrafp/lib/audio/: byte_control.h  downsampler.cpp  downsampler.h  wav.cpp  wav.h
core/recognition/src/main/cpp/vibrafp/lib/utils/: base64.h  crc32.h  fft.h  hanning.h  ring_buffer.h
core/strings/: build.gradle  build.gradle.kts
core/ui/: build.gradle  build.gradle.kts
data/: build.gradle  build.gradle.kts  consumer-rules.pro
data/schemas/com.mrsep.musicrecognizer.data.database.ApplicationDatabase/: 1.json  4.json  6.json
data/src/main/: AndroidManifest.xml
data/src/main/proto/: acr_cloud_config_proto.proto  audio_capture_mode_proto.proto  music_service_proto.proto  recognition_provider_proto.proto  user_preferences_proto.proto
fastlane/metadata/android/ar/: full_description.txt  short_description.txt
fastlane/metadata/android/br/: short_description.txt
fastlane/metadata/android/ca/: full_description.txt  short_description.txt
fastlane/metadata/android/cs/: full_description.txt  short_description.txt
fastlane/metadata/android/el-GR/: short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/et/: full_description.txt  short_description.txt
fastlane/metadata/android/fr/: full_description.txt  short_description.txt
fastlane/metadata/android/gl-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/hu-HU/: full_description.txt  short_description.txt
fastlane/metadata/android/it-IT/: full_description.txt  short_description.txt
fastlane/metadata/android/iw-IL/: full_description.txt  short_description.txt
fastlane/metadata/android/ja-JP/: short_description.txt
fastlane/metadata/android/pl-PL/: full_description.txt  short_description.txt
fastlane/metadata/android/pt/: full_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/sk/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/tr/: full_description.txt  short_description.txt
fastlane/metadata/android/uk/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
feature/backup/: build.gradle.kts
feature/developer-mode/: build.gradle  build.gradle.kts
feature/onboarding/: build.gradle  build.gradle.kts
feature/preferences/: build.gradle  build.gradle.kts
feature/recognition/: build.gradle  build.gradle.kts  consumer-rules.pro
feature/recognition-queue/: build.gradle  build.gradle.kts
feature/track/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1414 files in other folders)
